[travis-ci] Use the Release scheme instead of GitX
$ xctool -project GitX.xcodeproj -scheme GitX build test
ERROR: Can't find scheme 'GitX'.
Possible schemes include:
  Debug
  Release
The command "xctool -project GitX.xcodeproj -scheme GitX build test" exited with 1.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ before_install:
 language: objective-c
 
 xcode_project: GitX.xcodeproj
-xcode_scheme: GitX
+xcode_scheme: Release
 # xcode_sdk: iphonesimulator7.1
