--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@
 before_install:
 - git submodule init
 - git submodule update
+- pushd objective-git; git submodule init; git submodule update; popd
 
 language: objective-c
 
