[travis-ci] Objective-git dependency on libssh2.a for linking.
      ✗ Link ObjectiveGit (10 ms)
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
Ld /Users/travis/Library/Developer/Xcode/DerivedData/GitX-fzchnumrpjcepjdnoxqteybonxvy/Build/Products/Release/ObjectiveGit.framework/Versions/A/ObjectiveGit normal x86_64
    cd /Users/travis/build/tsnow/gitx/objective-git
    export MACOSX_DEPLOYMENT_TARGET=10.7
    /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang -arch x86_64 -dynamiclib -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.9.sdk -L/Users/travis/Library/Developer/Xcode/DerivedData/GitX-fzchnumrpjcepjdnoxqteybonxvy/Build/Products/Release -L. -LExternal -F/Users/travis/Library/Developer/Xcode/DerivedData/GitX-fzchnumrpjcepjdnoxqteybonxvy/Build/Products/Release -filelist /Users/travis/Library/Developer/Xcode/DerivedData/GitX-fzchnumrpjcepjdnoxqteybonxvy/Build/Intermediates/ObjectiveGitFramework.build/Release/ObjectiveGit.build/Objects-normal/x86_64/ObjectiveGit.LinkFileList -install_name @rpath/ObjectiveGit.framework/ObjectiveGit -mmacosx-version-min=10.7 -lgit2 -force_load External/libgit2.a /usr/local/lib/libssh2.a -lcrypto -lssl -fobjc-arc -fobjc-link-runtime -liconv -framework Cocoa -lz -single_module -compatibility_version 1 -current_version 1 -Xlinker -dependency_info -Xlinker /Users/travis/Library/Developer/Xcode/DerivedData/GitX-fzchnumrpjcepjdnoxqteybonxvy/Build/Intermediates/ObjectiveGitFramework.build/Release/ObjectiveGit.build/Objects-normal/x86_64/ObjectiveGit_dependency_info.dat -o /Users/travis/Library/Developer/Xcode/DerivedData/GitX-fzchnumrpjcepjdnoxqteybonxvy/Build/Products/Release/ObjectiveGit.framework/Versions/A/ObjectiveGit
clang: error: no such file or directory: '/usr/local/lib/libssh2.a'
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
      1 errored, 0 warning (5671 ms)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 # Alphabetical for a reason.
 
 before_install:
+- brew install libssh2
+- brew info libssh2
 - git submodule init
 - git submodule update
 - pushd objective-git; git submodule init; git submodule update; popd
