[travis-ci nested_submodules] there's a flag for that.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,7 @@
 before_install:
 - brew install libssh2
 - brew info libssh2
-- git submodule init
-- git submodule update
-- pushd objective-git; git submodule init; git submodule update; popd
+- git submodule update --init --recursive
 
 language: objective-c
 
